# Preact

./: Home.module.css  app.py  example.py  index.js  main.py  pyproject.toml  readme.md  requirements.txt
Pext/: __init__.py
Preact/: __init__.py  createtemplate.py  html5.py  nonhtml5.py
css_modules/: __init__.py  css_module_file.py
src/Preact_HTML/: __init__.py  createtemplate.py  html5.py
