[tool.poetry]
name = "Preact_HTML"
version = "0.1.0"
description = "render UI components using a JSX-like syntax, making it easy to create dynamic and interactive user interfaces"
authors = ["Will <hi@wbell.dev>"]

[tool.poetry.dependencies]
python = "^3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
